[gd_scene load_steps=14 format=3 uid="uid://bxahkbmc84hpy"]

[ext_resource type="Script" path="res://addons/particlyst/inspector/modifier/particlyst_modifier_panel.gd" id="1_ppkvx"]
[ext_resource type="Texture2D" uid="uid://dyj1li2nlqty5" path="res://addons/particlyst/icon/particlyst_ui_arrow_down.svg" id="2_g0q3a"]
[ext_resource type="Texture2D" uid="uid://e2byiyp7jxwo" path="res://addons/particlyst/common/particlyst_empty_texture.tres" id="2_r8rco"]
[ext_resource type="Texture2D" uid="uid://bavi3hdvdbuqg" path="res://addons/particlyst/icon/particlyst_ui_arrow_right.svg" id="3_lbhe1"]
[ext_resource type="Texture2D" uid="uid://d11dyvthv3o6c" path="res://addons/particlyst/icon/particlyst_ui_remove.svg" id="5_bql8k"]
[ext_resource type="Texture2D" uid="uid://dd78edx58pfjs" path="res://addons/particlyst/icon/particlyst_op_multiply.svg" id="9_wmoo2"]
[ext_resource type="Texture2D" uid="uid://cl70althdfq3e" path="res://addons/particlyst/icon/particlyst_op_divide.svg" id="10_ip2ku"]
[ext_resource type="Texture2D" uid="uid://tnqw7xpmdt65" path="res://addons/particlyst/icon/particlyst_op_add.svg" id="11_dhtj4"]
[ext_resource type="Texture2D" uid="uid://b20qw5f61tsjk" path="res://addons/particlyst/icon/particlyst_op_subtract.svg" id="12_06bv4"]
[ext_resource type="Texture2D" uid="uid://whoadj2nubmc" path="res://addons/particlyst/icon/particlyst_op_set.svg" id="13_expmg"]
[ext_resource type="Texture2D" uid="uid://cadmh6aimi0j1" path="res://addons/particlyst/icon/particlyst_ui_drag_area.svg" id="13_k3ero"]
[ext_resource type="Texture2D" uid="uid://cdtt2iwnv7ox1" path="res://addons/particlyst/icon/particlyst_op_power.svg" id="14_g41iu"]
[ext_resource type="Script" path="res://addons/particlyst/inspector/modifier/particlyst_modifier_type_option.gd" id="21_ac04w"]

[node name="ModifierPanel" type="MarginContainer"]
offset_right = 442.0
offset_bottom = 202.0
script = ExtResource("1_ppkvx")

[node name="Pa" type="Panel" parent="."]
self_modulate = Color(2, 2, 2, 0.427)
layout_mode = 2
mouse_filter = 2

[node name="Mr" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="V" type="VBoxContainer" parent="Mr"]
layout_mode = 2

[node name="HeaderCo" type="HBoxContainer" parent="Mr/V"]
layout_mode = 2

[node name="Mr" type="MarginContainer" parent="Mr/V/HeaderCo"]
layout_mode = 2

[node name="Pa" type="Panel" parent="Mr/V/HeaderCo/Mr"]
layout_mode = 2
mouse_filter = 2

[node name="Mr" type="MarginContainer" parent="Mr/V/HeaderCo/Mr"]
layout_mode = 2

[node name="ExpandCheckBox" type="CheckBox" parent="Mr/V/HeaderCo/Mr/Mr"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_icons/checked = ExtResource("2_g0q3a")
theme_override_icons/unchecked = ExtResource("3_lbhe1")

[node name="TargetPropertyOptionButton" type="OptionButton" parent="Mr/V/HeaderCo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_icons/arrow = ExtResource("2_r8rco")

[node name="OperationOptionButton" type="OptionButton" parent="Mr/V/HeaderCo"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_icons/arrow = ExtResource("2_r8rco")
selected = 0
item_count = 6
popup/item_0/icon = ExtResource("9_wmoo2")
popup/item_1/icon = ExtResource("10_ip2ku")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("11_dhtj4")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("12_06bv4")
popup/item_3/id = 3
popup/item_4/icon = ExtResource("13_expmg")
popup/item_4/id = 4
popup/item_5/icon = ExtResource("14_g41iu")
popup/item_5/id = 5

[node name="ModifierTypeOptionButton" type="OptionButton" parent="Mr/V/HeaderCo"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_icons/arrow = ExtResource("2_r8rco")
fit_to_longest_item = false
script = ExtResource("21_ac04w")

[node name="Mr2" type="MarginContainer" parent="Mr/V/HeaderCo"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Panel" type="Panel" parent="Mr/V/HeaderCo/Mr2"]
layout_mode = 2
mouse_filter = 2

[node name="Mr" type="MarginContainer" parent="Mr/V/HeaderCo/Mr2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="EnabledCheckBox" type="CheckBox" parent="Mr/V/HeaderCo/Mr2/Mr"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true

[node name="RemoveButton" type="Button" parent="Mr/V/HeaderCo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
icon = ExtResource("5_bql8k")

[node name="Mr3" type="MarginContainer" parent="Mr/V/HeaderCo"]
layout_mode = 2

[node name="Pa" type="Panel" parent="Mr/V/HeaderCo/Mr3"]
layout_mode = 2
mouse_filter = 2

[node name="Mr" type="MarginContainer" parent="Mr/V/HeaderCo/Mr3"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="DragControl" type="TextureRect" parent="Mr/V/HeaderCo/Mr3/Mr"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("13_k3ero")
stretch_mode = 3

[node name="PropertiesCo" type="VBoxContainer" parent="Mr/V"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sep" type="HSeparator" parent="Mr/V/PropertiesCo"]
layout_mode = 2

[connection signal="toggled" from="Mr/V/HeaderCo/Mr/Mr/ExpandCheckBox" to="." method="_on_expand_check_box_toggled"]
[connection signal="item_selected" from="Mr/V/HeaderCo/TargetPropertyOptionButton" to="." method="_on_target_property_option_button_item_selected"]
[connection signal="item_selected" from="Mr/V/HeaderCo/OperationOptionButton" to="." method="_on_operation_option_button_item_selected"]
[connection signal="item_selected" from="Mr/V/HeaderCo/ModifierTypeOptionButton" to="." method="_on_modifier_type_option_button_item_selected"]
[connection signal="toggled" from="Mr/V/HeaderCo/Mr2/Mr/EnabledCheckBox" to="." method="_on_enabled_check_box_toggled"]
[connection signal="pressed" from="Mr/V/HeaderCo/RemoveButton" to="." method="_on_remove_button_pressed"]
